k8s/env/prod/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oliverrr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.oliverrr.net`)
      kind: Rule
      services:
        - name: oliverrr-frontend-prod
          port: frontend
    - match: Host(`cms.oliverrr.net`)
      kind: Rule
      services:
        - name: oliverrr-backend-prod
          port: backend
  tls:
    certResolver: defaultCertResolver
